Lots of changes

--- a/www/layouts/default.html
+++ b/www/layouts/default.html
@@ -74,22 +74,23 @@
 
 <footer>
     <section class="info-section">
-        <div class="container text-container col-md-2 col-md-offset-1">
+        <div class="container text-container col-md-3 col-md-offset-1">
             <ul>
-                <li>Home</li>
-                <li>Offices</li>
-                <li>Meeting Rooms</li>
-                <li>Client List</li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/offices/">Offices</a></li>
+                <li><a href="/virtual-offices/">Virtual Offices</a></li>
+                <li><a href="/meeting-rooms/">Meeting Rooms</a></li>
+                <li><a href="/client-list/">Client List</a></li>
             </ul>
         </div>
-        <div class="container text-container col-md-2 col-md-offset-1">
+        <div class="container text-container col-md-3 col-md-offset-1">
             <ul>
-                <li>Contact</li>
-                <li><a href="/faq.html">FAQ</a></li>
-                <li>Testimonials</li>
+                <li><a href="/#enquiries">Contact</a></li>
+                <li><a href="/testimonials/">Testimonials</a></li>
+                <li><a href="/faq/">FAQ</a></li>
             </ul>
         </div>
-        <div class="attribution container text-container col-md-5 col-md-offset-2">
+        <div class="attribution container text-container col-md-3 col-md-offset-2">
             <p>&copy; Alico Property Consultants 2015</p>
             <br/>
             <p>Website design by CORE Data Systems Ltd.</p>
