--- a/www/scss/screen.scss
+++ b/www/scss/screen.scss
@@ -147,7 +147,7 @@ section {
   }
   &.office-inside {
     height: 300px;
-    background: url('/images/empty-office.png') 50% -70% fixed;
+    background: url('/images/empty-office.png') 50% -100% fixed;
     padding: 80px 0;
   }
   &.client-list {
@@ -279,15 +279,36 @@ footer section {
 
 /* Meeting Room Booking */
 
+#meeting-room-booking-outside {
+  width: 100%;
+  position: relative;
+  border: 1px solid #ddd;
+
+  #meeting-room-booking-container {
+    width: 83.333334%;
+    margin-left: 16.666666%;
+    overflow-x: hidden;
+    overflow-y: visible;
+  }
+}
 #meeting-room-booking {
   table-layout: fixed;
   text-align: center;
+  width: 100%;
+  max-width: none;
+  margin: 0;
+  border: none;
+
+  &.transitioning {
+    transition: margin 0.5s;
+    width: 200%;
+    margin: 0 0 0 -100%;
+  }
 
   .wholeday {
     text-transform: uppercase;
     font-size: 0.8em;
     vertical-align: middle;
-    width: 100%;
     color: $gray-dark;
     height: 50px;
     cursor: pointer;
@@ -296,7 +317,6 @@ footer section {
     text-transform: uppercase;
     font-size: 0.8em;
     vertical-align: middle;
-    width: 100%;
     color: $gray-light;
     content: 'free';
     cursor: pointer;
@@ -317,9 +337,26 @@ footer section {
       content: 'confirm booking below';
     }
   }
-  tbody td {
+  .fixed-col {
+    left: 0;
+    position: absolute;
+    width: 16.666666%;
+    background-color: white;
+    border-left: none;
+    border-bottom: none;
+
+  }
+  td, th {
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
     height: 60px;
     vertical-align: middle;
+    border-bottom-width: 1px;
+
+    &:nth-of-type(2) {
+      border-left: none;
+    }
   }
 }
 
@@ -332,4 +369,15 @@ footer section {
 
 .faq {
   padding: 1em 0;
+}
+
+footer {
+  a {
+    text-decoration: none;
+    color: inherit;
+
+    &:hover {
+      color: inherit;
+    }
+  }
 }
